# p2p

./: .env.example  .gitignore  Anchor-engineering.toml  Anchor.toml  CLAUDE_MARKDOWN.md  Cargo.toml  Makefile  README.md  SMART_METER_SIMULATION.md  SOLANA_MIGRATION_PLAN.md  ami-engineering-config.yaml  auth_test_login.json  auth_test_register.json  clippy.toml  deploy-to-engineering.sh  deploy.sh  deploy_full_system.sh  docker-compose.dev.yml  docker-compose.optimized.yml  docker-compose.prod.yml  docker-compose.yml  engineering-campus-config.yaml  engineering-dept.json  engineering-operations-config.toml  engineering-validator-config.toml  facilities-mgmt.json  p2p-energy-trading.code-workspace  package.json  phase3-completion-report.md  programs.config.toml  register_test.json  run-phase3.sh  setup-dev.sh  sustainability-office.json  tsconfig.json
.github/: copilot-instructions.md  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  contract_issue.md  feature_request.md
.github/workflows/: README.md  api-gateway.yml  api-testing.yml  contracts.yml  docker.yml  frontend.yml  main.yml
.specify/docs/: README.md
.specify/memory/: constitution.md  constitution_update_checklist.md
api-gateway/: .env.example  .gitignore  Cargo.toml  Dockerfile  Dockerfile.dev  README.md  deny.toml
api-gateway/.sqlx/: query-18245f138390cf64b3452bc0d57b567c24717bfa66e6ba44c7493169d9422afa.json  query-24385fbee6940c36c9aca063d748b2509be6a37e5245e6becc75af27bfcb2fa8.json  query-aff32efb0dfdbe374693e8ac68d695a35e3e833ccd80bb1c20fb6271846093e6.json  query-c9b6b4cca27e4281b71db2f06a251c68957eb2695e175c6f627b22ed81f91c79.json  query-ddd507f9288dc79517bc4865202e1fee1ecda86e8b591297288f6af71c4a9159.json  query-eaa4ec52afd9a1fdda7dd2456067ae3a359d9a2154128397ea9db7bed528b915.json  query-fc078f38de6d1edb94015cdd3372b7fa69a4f339241d52518818746eb89c3587.json
api-gateway/src/: error.rs  handlers.rs  lib.rs  main.rs  middleware.rs  models.rs
api-gateway/src/auth/: jwt.rs  middleware.rs  mod.rs  password.rs
api-gateway/src/config/: mod.rs
api-gateway/src/database/: mod.rs  schema.rs
api-gateway/src/handlers/: analytics.rs  auth.rs  blockchain.rs  health.rs  meters.rs  mod.rs  trading.rs  user_management.rs  users.rs
api-gateway/src/middleware/: mod.rs
api-gateway/src/models/: blockchain.rs  energy.rs  mod.rs  trading.rs  user.rs
api-gateway/src/services/: mod.rs
api-gateway/src/utils/: mod.rs
api-gateway/tests/: README.md  auth_test.rs  health_test.rs
contracts/energy-token/: Cargo.toml
contracts/energy-token/src/: lib.rs
contracts/grid-token/: Cargo.toml  lib.rs
contracts/oracle/: Cargo.toml
contracts/oracle-client/: Cargo.toml  lib.rs
contracts/registry/: Cargo.toml  lib.rs
contracts/registry/src/: lib.rs
contracts/trading/: Cargo.toml  lib.rs
contracts/trading/src/: lib.rs
dapp/: README.md  package.json
dapp/anchor/: Anchor.toml
docker/api-gateway/: .env.docker  Dockerfile  Dockerfile.dev  README.md  build.sh  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  healthcheck.sh  package.json  server.js  setup.sh  start.sh
docker/contact/: Dockerfile  build-contracts.sh  deploy-all-contracts.sh  health-monitor.sh  setup-poa.sh  verify-deployment.sh  wait-for-validator.sh
docker/contract-deployer/: Dockerfile  build-contracts.sh  deploy-all-contracts.sh  health-monitor.sh  setup-poa.sh  verify-deployment.sh  wait-for-validator.sh
docker/contracts/: Dockerfile  Dockerfile.official  README.md  deploy_contracts.sh
docker/frontend/: DEPLOYMENT.md  (+7 more)
docker/smart-meter-simulator/: .env.example  Dockerfile  README.md  __init__.py  pyproject.toml  requirements.txt  simulator.py
docs/: AMI_INTEGRATION_PLAN.md  API_GATEWAY_DEVELOPMENT_PLAN.md  API_GATEWAY_SPECIFICATION.md  BLOCKCHAIN_CONSENSUS.md  C4_ARCHITECTURE_OVERVIEW.md  CHANGELOG.md  COMPREHENSIVE_ARCHITECTURE_GUIDE.md  COMPREHENSIVE_BLOCKCHAIN_GUIDE.md  COMPREHENSIVE_DEVELOPMENT_GUIDE.md  CONTACT_ANALYSIS.md  DOCKER_DEPLOYMENT_GUIDE.md  DOCKER_QUICK_REFERENCE.md  DOCKER_STORAGE_OPTIMIZATION.md  DOCKER_TROUBLESHOOTING.md  ENGINEERING_OPERATIONS_MANUAL.md  MIGRATION_NOTICE.md  MIGRATION_SUMMARY.md  PROJECT_PROPOSAL.md  PoA-Architecture.md  README-ANCHOR.md  README.md  RECENT_UPDATES.md  SMART_METER_SIMULATION.md  SYSTEM_ARCHITECTURE.md  TECHNICAL_SUMMARY.md  blockchain-frameworks-comparison.md  c4-component-controllers.md  c4-component-data.md  c4-component-services.md  c4-component.md  c4-container.md  c4-deployment.md  c4-system-context.md  contracts-diagram.md  engineering-phase4-summary.md  framework-recommendations.md  implementation-examples.md  proposal.md  transaction-flow-example.md
fontend/: index.html
frontend/: README-CAMPUS.md  index.html  lighthouserc.json  package.json  playwright.config.ts  tailwind.config.js  tsconfig.json  vite.config.ts  vitest.config.ts
node/: Cargo.toml
programs/: Cargo.toml
programs/energy-token/: Cargo.toml
programs/energy-token/src/: lib.rs
programs/governance/: Cargo.toml
programs/governance/src/: lib.rs
programs/registry/: Cargo.toml
programs/registry/src/: lib.rs
programs/trading/: Cargo.toml
programs/trading/src/: lib.rs
runtime/: Cargo.toml
scripts/: deploy-programs.sh  deploy-smart-contracts-docker.sh  dev-setup.sh  dev-test.sh  engineering-pilot-deployment.sh  explore-local-network.sh  initialize-poa-docker.sh  run-phase4-engineering.sh  setup-api-gateway-dev.sh  setup-dev.sh  setup-poa.sh  test-integration.sh  validate-docker.sh
test-accounts/: engineering-faculty.json  engineering-student.json  rec-validator.json
test-meters/: ENG_001.json  ENG_002.json  ENG_003.json  ENG_004.json  ENG_006.json  ENG_008.json  ENG_009.json  ENG_011.json  ENG_013.json  METER_005.json  METER_007.json  METER_010.json  METER_012.json  METER_014.json  METER_015.json
tests/: integration.test.ts  p2p-energy-trading.ts  performance.test.ts  security.test.ts  stakeholder-acceptance.test.ts
validator-keys/: engineering-stake-keypair.json  engineering-validator-keypair.json  engineering-vote-keypair.json
(+106 files in other folders)
