[workspace]
resolver = "2"

members = [
    "contracts/registry",
    "contracts/grid-token",
    "contracts/trading",
    "contracts/oracle-client",
    "api-gateway",
]

[workspace.dependencies]
# ink! dependencies
ink = { version = "5.1.1", default-features = false }
scale = { package = "parity-scale-codec", version = "3.7.5", default-features = false, features = ["derive"] }
scale-info = { version = "2.11.6", default-features = false, features = ["derive"] }

# OpenBrush dependencies for PSP22 token standard
openbrush = { version = "3.2.0", default-features = false }

# Substrate dependencies for types
sp-std = { version = "14.0.0", default-features = false }
sp-core = { version = "38.0.0", default-features = false }
sp-runtime = { version = "43.0.0", default-features = false }

[profile.release]
overflow-checks = false
lto = true
codegen-units = 1
opt-level = "z"

[profile.dev]
overflow-checks = true
