[package]
name = "energy-token"
version = "0.1.0"
description = "Energy token program with REC validation for P2P Energy Trading platform"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "energy_token"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.29.0"
anchor-spl = "0.29.0"
