[package]
name = "grid_token"
version = "0.1.0"
authors = ["P2P Energy Trading Team"]
edition = "2021"
publish = false

[dependencies]
ink = { workspace = true }
scale = { workspace = true }
scale-info = { workspace = true, optional = true }

# OpenBrush for PSP22 token standard
openbrush = { workspace = true, features = ["psp22"] }

[lib]
name = "grid_token"
path = "lib.rs"

[features]
default = ["std"]
std = [
    "ink/std",
    "scale/std",
    "scale-info/std",
    "openbrush/std",
]
ink-as-dependency = []
