[package]
name = "oracle_client"
version = "0.1.0"
authors = ["P2P Energy Trading Team"]
edition = "2021"
publish = false

[dependencies]
ink = { workspace = true }
scale = { workspace = true }
scale-info = { workspace = true, optional = true }

[lib]
name = "oracle_client"
path = "lib.rs"

[features]
default = ["std"]
std = [
    "ink/std",
    "scale/std",
    "scale-info/std",
]
ink-as-dependency = []
