[package]
name = "trading"
version = "0.1.0"
authors = ["P2P Energy Trading Team"]
edition = "2021"
publish = false

[dependencies]
ink = { workspace = true }
scale = { workspace = true }
scale-info = { workspace = true, optional = true }

[lib]
name = "trading"
path = "lib.rs"

[features]
default = ["std"]
std = [
    "ink/std",
    "scale/std",
    "scale-info/std",
]
ink-as-dependency = []
