[project]
name = "smart-meter-simulator"
version = "0.1.0"
description = "Smart Meter Simulator for P2P Energy Trading Platform"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "kafka-python>=2.0.2",
    "psycopg2-binary>=2.9.7",
    "python-dotenv>=1.0.0",
    "schedule>=1.2.0",
    "faker>=37.6.0",
    "numpy>=2.3.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.black]
line-length = 88
target-version = ['py311']

[tool.isort]
profile = "black"
line_length = 88

[dependency-groups]
dev = [
    "black>=25.1.0",
    "flake8>=7.3.0",
    "isort>=6.0.1",
    "pytest>=8.4.2",
]
