[package]
name = "energy-token"
version = "0.1.0"
description = "Energy Token program for P2P Energy Trading - SPL token wrapper"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "energy_token"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = "0.31.1"
anchor-spl = "0.31.1"
spl-token = "8.0.0"