[package]
name = "governance"
version = "0.1.0"
description = "PoA Governance program for P2P Energy Trading platform - manages REC validators"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "governance"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.29.0"
