[package]
name = "registry"
version = "0.1.0"
description = "Registry program for P2P Energy Trading - User and meter management"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "registry"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = "0.31.1"
anchor-spl = "0.31.1"