[package]
name = "trading"
version = "0.1.0"
description = "Trading program for P2P Energy Trading platform - manages energy marketplace"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "trading"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.29.0"
anchor-spl = "0.29.0"
