[package]
name = "trading"
version = "0.1.0"
description = "Trading program for P2P Energy Trading - Order book and marketplace"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "trading"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = "0.31.1"
anchor-spl = "0.31.1"
spl-token = "4.0.0"